--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -6,15 +6,15 @@
 # Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
 
 # Title of your site
-title = "Academic"
+title = "Huimin Li's Homepage"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "/"
+baseurl = "https://www.huiminli-zju.top/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = ""
+copyright = "38 Zheda Road (Zhejiang University), Room 115, Hangzhou, 310027"
 
 ############################
 ## Advanced options below ##
