--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,9 +9,9 @@
   weight = 10
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 20
+  name = "Experience"
+  url = "#experience"
+  weight = 30
 
 [[main]]
   name = "Projects"
@@ -20,7 +20,7 @@
 
 [[main]]
   name = "Publications"
-  url = "#featured"
+  url = "#publications"
   weight = 40
 
 [[main]]
