--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -14,7 +14,7 @@ baseurl = "https://www.huiminli-zju.top/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = ""
+copyright = "&copy; 2020 Huimin Li·"
 
 ############################
 ## Advanced options below ##
